Adjust the look after feedback
- Made the tail look less penis-like
- Raised the sunglasses up a bit and added blinking to encourage users to click on them

--- a/index.html
+++ b/index.html
@@ -20,13 +20,7 @@
                 <div class="figure">
                     <div class="body">
                         <div class="tail"><div id="tail">
-                            <div class="tail-section-1">
-                                <div class="hex size-0 red">
-                                </div>
-                            </div>
-                            <div class="tail-section-0">
-                                <div class="hex size-1 red">
-                                </div>
+                            <div class="hex size-2 red">
                             </div>
                         </div></div>
                         <div class="wings">
@@ -424,7 +418,7 @@
                             </div></div>
                         </div>
                     </div>
-                    <div class="sunglasses"><div id="sunglasses">
+                    <div class="sunglasses"><div id="sunglasses" class="pulse">
                         <div class="lens-L">
                             <div class="hex size-4 funk">
                             </div>
